--- a/redir.html
+++ b/redir.html
@@ -25,5 +25,8 @@
   <p>
     No, <a href="https://www.instagram.com/ottawa_rcp/">keep me informed</a>.
   </p>
+  <p>
+    <img src="communist-revolution-logo-horizontal.svg"/>
+  </p>
 </body>
 </html>
