--- a/redir.html
+++ b/redir.html
@@ -18,7 +18,8 @@
   </script>
 </head>
 <body>
-  <h1>Would you like to unsubscribe?</h1>
+  <h1>The RCP Events List allows you to keep informed about upcoming events and activities!</h1>
+  <p>Would you like to unsubscribe?</p>
   <p>
     Yes, <a id="unsubscribe" href="https://script.google.com/macros/s/AKfycbyOQp_UgGJ0wRqvTUV_oIQyhSapcLiO22f0TUsDnpAxPYSay_0uVoCbnX9F4iaa9Qmt/exec">unsubscribe</a>.
   </p>
