--- a/redir.html
+++ b/redir.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Confirmation Page</title>
+  <title>RCP Events List - communications preferences</title>
   <script>
     // Function to append query parameters to the "unsubscribe" link
     function appendQueryParams() {
